--- a/cmd/dev/ui/editable.html
+++ b/cmd/dev/ui/editable.html
@@ -51,6 +51,10 @@ app.component('editable', {
         box-shadow: 1px 2px 3px 2px #00000055;
         border: 2px solid #238b;
     }
+    
+    .editable.edit{
+        border: 2px solid #6ad14a;
+    }
 
     .editable .caption {
         display: flex;
